2.2.3 Changelog

Bug Fixes
Minor bug in upb.initialise.php.
Potential bugs in upgrade script.
Move topics bug

New Features
Password Strength Meter
Send a PM via Messenger SystemVersion number displayed in footer