@@ -1,10 +1,19 @@
 2.2.3 Changelog
 
 Bug Fixes
+---------
+
 Minor bug in upb.initialise.php.
-Potential bugs in upgrade script.
 Move topics bug
+Stripped slashes on config page.
+Attach file section of form is not displayed if filesize and/or location is 0 or not set
 
 New Features
+------------
+
+Custom Profile Fields
 Password Strength Meter
-Send a PM via Messenger SystemVersion number displayed in footer
+Send a PM via Messenger System
+Version number displayed in footer
+Skin selection now dropdown list rather than text box
+New BBcode buttons by Nightmare
